# UTokyo-assignment

./: .gitignore  Makefile  README.md
3A/applied_data_analysis/: pyproject.toml
3A/applied_data_analysis/final_report/: readme.md
3A/applied_data_analysis/final_report/problem1/: DNN.py  inference.py  main.py  train.py  応用データ解析期末課題.docx
3A/applied_data_analysis/final_report/problem1/config/: config1_1.yaml  config2_1.yaml  config2_2.yaml  config2_3.yaml  config2_4.yaml  config2_5.yaml  config2_6.yaml  config3_0.yaml  config3_1.yaml  config3_2.yaml  config3_3.yaml  config3_4.yaml  config3_5.yaml
3A/applied_data_analysis/final_report/problem2/: 応用データ解析課題2.ipynb
3A/applied_data_analysis/final_report/problem2/data/: explanation.txt
3A/applied_data_analysis/mid_report/: report.tex  応用データ解析課題中間課題.ipynb
3A/multi-agent_system/: pyproject.toml
3A/multi-agent_system/report1/: main.py  pso.py  q_laerning.py  report1.tex  test_functions.py
3A/multi-agent_system/report1/config/: Alpine.yaml  Alpine_large.yaml  Griewank.yaml  Griewank_large.yaml  Rastrigin.yaml  Rastrigin_large.yaml  Rosenbrock.yaml  Rosenbrock_large.yaml  Sphere.yaml  Sphere_large.yaml  two_n_minima.yaml  two_n_minima_large.yaml
3A/multi-agent_system/report2/: q_laerning.py
